[tool.poetry]
name = "python-fastapi"
version = "0.1.0"
description = ""
authors = ["Lisa Han <ellesis@gmail.com>"]
readme = "README.md"
packages = [{include = "python_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
